@@ -3,6 +3,8 @@ Revision history for CHI::Driver::SharedMem
 0.15
 	Use JSON instead of Storable, it's more reliable
 	Remove the shared memory area when running 'make test'
+	Remove the shared area if it's only full of expired keys and it's about to
+		become unreferenced
 
 0.14	Thu 23 Jan 10:34:54 EST 2014
 	Fix a rare condition where the data fails to read
